--- a/Dojo/Views/Samurais/Index.cshtml
+++ b/Dojo/Views/Samurais/Index.cshtml
@@ -38,9 +38,9 @@
         }
     </td>
     <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+        @Html.ActionLink("Modifier", "Edit", new { id = item.Id }) |
+        @Html.ActionLink("Détails", "Details", new { id = item.Id }) |
+        @Html.ActionLink("Supprimer", "Delete", new { id = item.Id })
     </td>
 </tr>
 }
