--- a/Dojo/Views/Samurais/Index.cshtml
+++ b/Dojo/Views/Samurais/Index.cshtml
@@ -20,6 +20,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Arme)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ArtMartials)
+        </th>
         <th></th>
     </tr>
 
@@ -35,6 +38,16 @@
         @if (item.Arme != null)
         {
             @Html.DisplayFor(modelItem => item.Arme.Nom)
+        }
+    </td>
+    <td>
+        @if (item.ArtMartials != null)
+        {
+            foreach (var artMartial in item.ArtMartials)
+            {
+                @Html.DisplayFor(modelItem => artMartial.Nom)
+                <br />
+            }
         }
     </td>
     <td>
