--- a/Dojo/Views/Samurais/_SetSamurai.cshtml
+++ b/Dojo/Views/Samurais/_SetSamurai.cshtml
@@ -39,6 +39,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.ArtMartiauxIds, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.ListBoxFor(model => model.ArtMartiauxIds, Model.ArtMartials.Select(p => new SelectListItem() { Text = p.Nom, Value = p.Id.ToString() }), new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ArtMartiauxIds, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 @if (ViewBag.Title.Equals("Edit"))
                 {
