--- a/Dojo/Views/Shared/_Layout.cshtml
+++ b/Dojo/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Samuraïs", "Index", "Samurais")</li>
                     <li>@Html.ActionLink("Armes", "Index", "Armes")</li>
+                    <li>@Html.ActionLink("Arts martiaux", "Index", "ArtMartials")</li>
                 </ul>
             </div>
         </div>
