--- a/Dojo/Views/Armes/Delete.cshtml
+++ b/Dojo/Views/Armes/Delete.cshtml
@@ -32,9 +32,10 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+<div class="form-actions no-color">
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <input type="submit" value="Delete" class="btn btn-default" /> |
+    @Html.ActionLink("Back to List", "Index")
+</div>
     }
 </div>
