--- a/Dojo/Views/Samurais/Details.cshtml
+++ b/Dojo/Views/Samurais/Details.cshtml
@@ -36,6 +36,30 @@
                 @Html.DisplayFor(model => model.Arme.Nom)
             }
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ArtMartials)
+        </dt>
+
+        <dd>
+            @if (Model.ArtMartials != null)
+            {
+                foreach (var artMartial in Model.ArtMartials)
+                {
+                    @Html.DisplayFor(modelItem => artMartial.Nom)
+                    <br />
+                }
+            }
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Potentiel)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Potentiel)
+        </dd>
+
     </dl>
 </div>
 <p>
